simple-ingress-http/pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-test-service
  namespace: test-ingress-http
  labels:
    app: pod-test-ingress
spec:
  selector:
    app: pod-test-ingress
  ports:
    - name: http
      protocol: TCP
      port: 6543
      targetPort: 6543
