simple-ingress-http/pod-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-test-ingress-http
  namespace: test-ingress-http
  labels:
    app: pod-test-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  rules:
    - host: "simple.kube.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pod-test-service
                port:
                  number: 6543
